pkg/front_end/testcases/runtime_checks/implicit_downcast_for_condition.dart.strong.expect
library test /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/runtime_checks/implicit_downcast_for_condition.dart:5:1: Error: Library doesn't support null safety.
// // @dart=2.9
// ^^^^^^^^^^^^
//
import self as self;
import "dart:core" as core;

static method main() → void {
  core::Object* o = 1;
  try {
    for (core::int* i = 0; o as{TypeError,ForLegacy} core::bool*; i = i.{core::num::+}(1){(core::num*) →* core::int*}) {
    }
    throw "no exception";
  }
  on core::TypeError* catch(no-exception-var) {
  }
}
